This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - add support for ipv6 livestatus backends (#753)

2.18     Mon Dec 25 15:27:06 CET 2017
          - add new option 'commandline_obfuscate_pattern'
          - add python and go client to default cookie_auth_direct_agents
          - combine recurring downtimes for the same time into a single cron entry
          - fix listing service recurring downtimes (#766)
          - fix excel export button (#765)
          - Config Tool:
            - show summary prompt if a post_obj_save_cmd is set
          - Business Process:
            - add weighted state example custom function
            - add new configuration option 'favorite_custom_function'
            - skip reloading core if objects have not changed
          - Reports:
            - add option to only send mails for specific thresholds
            - add button to quickly create excel export reports
            - fix listing outages during downtimes
          - Logcache:
            - fix importing logs from file (#751)
            - fix issue with locking
          - Panorama:
            - add squares widget
            - add user styles option to add generic styles usable in labels etc.
            - add optional helper grid
            - update extjs 4.2.2
            - add label availability options
            - fix moving watermark elements
            - fix widgets display issue in IE11
            - fix row height in status lists (#779)
            - fix minemap header in chrome and IE (#782)
          - Mobile:
            - add config option to add additonal links on the home page

2.16-2   Sun Aug 20 13:47:31 CEST 2017
          - add json export to tac page
          - add workaround for displaying wrong host current_check_attempt
          - send commands in bulk of 100 each
          - Business Process:
            - change pre/post hooks arguments

2.16     Tue Aug  8 21:18:40 CEST 2017